Changes for 4.2.3rc1

New features:
...G...... [ZBXNEXT-287] added SSL support for agent HTTP checks (asestakovs)
...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)

Bug fixes:
..F....... [ZBX-15974] improved trigger expression list in trigger modal form (gcalenko)
...G...... [ZBX-14441] fixed windows agent "eventlog" key for reading big event log files of windows 2003 (MVekslers)
..F....... [ZBX-16109] fixed hidden error in graphs for PHP 7.3.5 (rlataria)
....I...S. [ZBX-16093] fixed regular expression File systems for discovery does not contain apfs (akozlovs)
..F....... [ZBX-16080] fixed setup page to not to use bclib (talbergs)
..F....... [ZBX-15797] fixed dashboard map widget sub-map link behaviour (miks, talbergs)
A.F....... [ZBX-15049] fixed to host group limited global scripts to be usable in sub group (talbergs)
.......PST [ZBX-16138] fixed return value type and added preprocessing steps for items in remote internal checks tamplates; fixed unsigned write cache value for remote internal checks (viktors)
.......PS. [ZBX-15942] changed proxy to send timestamps of empty historical values to server, so throttled items are not listed in administration/queue (wiper)
.......PS. [ZBX-15963] fixed HTTP agent support of non-HTTP scheme in URL field (asestakovs)
.......PS. [ZBX-16151] fixed theoretical possibility of large numbers in json data being truncated, added boolean value support to json parser (wiper)
..F....... [ZBX-15778] fixed wrong filtering by "Age less than" and "Show suppressed problems" in trigger overview (vasilijs)
........S. [ZBX-16150] fixed inactive, unmounted, unaccessible VMware datastore causes unknown column nan insertion in field list (akozlovs)
A......... [ZBX-16122] fixed api validation of trigger dependency (averza)

--------------------------------------------------------------------------------
Changes for 4.2.2
