@@ -453,6 +453,7 @@ class CControllerDashboardView extends CControllerDashboardAbstract {
 						'height' => (int) $widget['height']
 					],
 					'rf_rate' => (int) CProfile::get('web.dashbrd.widget.rf_rate', $rf_rate, $widgetid),
+					'scrollable' => CWidgetConfig::isScrollable($widget['type']),
 					'fields' => $fields
 				];
 			}
