@@ -5,6 +5,7 @@ New features:
 ...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)
 
 Bug fixes:
+..F....... [ZBX-15882] fixed widgets flickering on refresh (ashubin)
 ..F....... [ZBX-15974] improved trigger expression list in trigger modal form (gcalenko)
 ...G...... [ZBX-14441] fixed windows agent "eventlog" key for reading big event log files of windows 2003 (MVekslers)
 ..F....... [ZBX-16109] fixed hidden error in graphs for PHP 7.3.5 (rlataria)
@@ -415,6 +416,7 @@ New features:
 ...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)
 
 Bug fixes:
+..F....... [ZBX-15882] fixed widgets flickering on refresh (ashubin)
 ..F....... [ZBX-15974] improved trigger expression list in trigger modal form (gcalenko)
 ...G...... [ZBX-14441] fixed windows agent "eventlog" key for reading big event log files of windows 2003 (MVekslers)
 ..F....... [ZBX-16109] fixed hidden error in graphs for PHP 7.3.5 (rlataria)
